kubernetes/apps/nodered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  namespace: nodered
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
        - name: nodered
          image: nodered/node-red:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 1880
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /mnt/8000SAM1/8000/docker/mqtt/nodered/data
            type: Directory
