kubernetes/apps/nodered/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  namespace: nodered
spec:
  type: ClusterIP
  selector:
    app: nodered
  ports:
    - name: http
      port: 1880
      targetPort: 1880
      protocol: TCP
